--- a/LootLogger/Base.lproj/Main.storyboard
+++ b/LootLogger/Base.lproj/Main.storyboard
@@ -15,9 +15,40 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="gk1-SP-Nv9">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XUE-Yw-em9">
+                                    <rect key="frame" x="8" y="14.5" width="195" height="31"/>
+                                    <state key="normal" title="Button"/>
+                                    <buttonConfiguration key="configuration" style="plain" title="Edit"/>
+                                    <connections>
+                                        <action selector="toggleEditingMode:" destination="3Sa-QC-Y54" eventType="touchUpInside" id="bXW-I4-XoP"/>
+                                    </connections>
+                                </button>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CcE-HG-Z6w">
+                                    <rect key="frame" x="211" y="14.5" width="195" height="31"/>
+                                    <state key="normal" title="Button"/>
+                                    <buttonConfiguration key="configuration" style="plain" title="Add"/>
+                                    <connections>
+                                        <action selector="addNewItem:" destination="3Sa-QC-Y54" eventType="touchUpInside" id="Dn2-wI-dYC"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstItem="CcE-HG-Z6w" firstAttribute="width" secondItem="XUE-Yw-em9" secondAttribute="width" id="AFv-ug-npP"/>
+                                <constraint firstItem="XUE-Yw-em9" firstAttribute="leading" secondItem="gk1-SP-Nv9" secondAttribute="leading" constant="8" id="a0L-xb-yAp"/>
+                                <constraint firstItem="XUE-Yw-em9" firstAttribute="centerY" secondItem="gk1-SP-Nv9" secondAttribute="centerY" id="eSy-f4-EFf"/>
+                                <constraint firstItem="CcE-HG-Z6w" firstAttribute="leading" secondItem="XUE-Yw-em9" secondAttribute="trailing" constant="8" id="gH9-s0-utw"/>
+                                <constraint firstAttribute="trailing" secondItem="CcE-HG-Z6w" secondAttribute="trailing" constant="8" id="iTF-lN-GPx"/>
+                                <constraint firstItem="CcE-HG-Z6w" firstAttribute="centerY" secondItem="gk1-SP-Nv9" secondAttribute="centerY" id="woW-7x-Xjx"/>
+                            </constraints>
+                        </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="UITableViewCell" textLabel="5RX-lF-Z8e" detailTextLabel="qAH-CM-484" style="IBUITableViewCellStyleValue1" id="82S-Ty-X7Y">
-                                <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                <rect key="frame" x="0.0" y="104.5" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="82S-Ty-X7Y" id="rSA-KD-TXb">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
@@ -49,7 +80,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YLG-7N-pM0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-300" y="13"/>
+            <point key="canvasLocation" x="-10.144927536231885" y="50.892857142857139"/>
         </scene>
     </scenes>
     <resources>
