--- a/LootLogger/Base.lproj/Main.storyboard
+++ b/LootLogger/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Items View Controller-->
+        <!--LootLogger-->
         <scene sceneID="ydD-2J-v8t">
             <objects>
                 <tableViewController id="3Sa-QC-Y54" customClass="ItemsViewController" customModule="LootLogger" customModuleProvider="target" sceneMemberID="viewController">
@@ -16,40 +16,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <view key="tableHeaderView" contentMode="scaleToFill" id="gk1-SP-Nv9">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XUE-Yw-em9">
-                                    <rect key="frame" x="8" y="14.5" width="195" height="31"/>
-                                    <state key="normal" title="Button"/>
-                                    <buttonConfiguration key="configuration" style="plain" title="Edit"/>
-                                    <connections>
-                                        <action selector="toggleEditingMode:" destination="3Sa-QC-Y54" eventType="touchUpInside" id="bXW-I4-XoP"/>
-                                    </connections>
-                                </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CcE-HG-Z6w">
-                                    <rect key="frame" x="211" y="14.5" width="195" height="31"/>
-                                    <state key="normal" title="Button"/>
-                                    <buttonConfiguration key="configuration" style="plain" title="Add"/>
-                                    <connections>
-                                        <action selector="addNewItem:" destination="3Sa-QC-Y54" eventType="touchUpInside" id="Dn2-wI-dYC"/>
-                                    </connections>
-                                </button>
-                            </subviews>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            <constraints>
-                                <constraint firstItem="CcE-HG-Z6w" firstAttribute="width" secondItem="XUE-Yw-em9" secondAttribute="width" id="AFv-ug-npP"/>
-                                <constraint firstItem="XUE-Yw-em9" firstAttribute="leading" secondItem="gk1-SP-Nv9" secondAttribute="leading" constant="8" id="a0L-xb-yAp"/>
-                                <constraint firstItem="XUE-Yw-em9" firstAttribute="centerY" secondItem="gk1-SP-Nv9" secondAttribute="centerY" id="eSy-f4-EFf"/>
-                                <constraint firstItem="CcE-HG-Z6w" firstAttribute="leading" secondItem="XUE-Yw-em9" secondAttribute="trailing" constant="8" id="gH9-s0-utw"/>
-                                <constraint firstAttribute="trailing" secondItem="CcE-HG-Z6w" secondAttribute="trailing" constant="8" id="iTF-lN-GPx"/>
-                                <constraint firstItem="CcE-HG-Z6w" firstAttribute="centerY" secondItem="gk1-SP-Nv9" secondAttribute="centerY" id="woW-7x-Xjx"/>
-                            </constraints>
-                        </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ItemCell" rowHeight="65" id="82S-Ty-X7Y" customClass="ItemCell" customModule="LootLogger" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="104.5" width="414" height="65"/>
+                                <rect key="frame" x="0.0" y="44.5" width="414" height="65"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="82S-Ty-X7Y" id="rSA-KD-TXb">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="65"/>
@@ -97,7 +66,13 @@
                             <outlet property="delegate" destination="3Sa-QC-Y54" id="wpj-8v-0Lk"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="BeA-Aq-NIV"/>
+                    <navigationItem key="navigationItem" title="LootLogger" id="TQ6-WL-g2d">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Aox-Iv-lnK">
+                            <connections>
+                                <action selector="addNewItem:" destination="3Sa-QC-Y54" id="wfN-J7-xpN"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YLG-7N-pM0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
