--- a/LootLogger/Base.lproj/Main.storyboard
+++ b/LootLogger/Base.lproj/Main.storyboard
@@ -147,12 +147,15 @@
                                         </subviews>
                                     </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Date Created" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1lB-bY-d7E">
-                                        <rect key="frame" x="0.0" y="126" width="374" height="588"/>
+                                        <rect key="frame" x="0.0" y="126" width="374" height="20.5"/>
                                         <gestureRecognizers/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="248" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="mBm-pY-8x0">
+                                        <rect key="frame" x="0.0" y="154.5" width="374" height="559.5"/>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -193,6 +196,7 @@
                     <navigationItem key="navigationItem" id="sQx-Dp-4aG"/>
                     <connections>
                         <outlet property="dateLabel" destination="1lB-bY-d7E" id="2eW-bu-3P3"/>
+                        <outlet property="imageView" destination="mBm-pY-8x0" id="oaK-KH-tmN"/>
                         <outlet property="nameField" destination="bto-Mj-DBz" id="lJH-CJ-OLj"/>
                         <outlet property="serialNumberField" destination="MMx-Hn-KHT" id="vEF-dy-c0J"/>
                         <outlet property="valueField" destination="UeH-vj-x4N" id="YxQ-ar-rgC"/>
